@@ -101,6 +101,10 @@
             </span>
 
             &nbsp;
+            <span id="d6Ctl" title="Buzzer Control">D6:<input id="d6CK" type="checkbox">
+            </span>
+
+            &nbsp;
             <span id="bzzCtl" title="Buzzer Control">Bzz:<input id="bzzCK" type="checkbox">
               <select class="doutselect" id="bzzPicker"></select>
             </span>
