@@ -42,6 +42,8 @@ Added up/down DAC controls
 Some housekeeping
 
 v0.8.60 4/22/2021
+Add controls for other outputs (D5, D6, buzzer).
+Hide D5 control until option menu is available.
 
 
 ====================== WORK ========================================
@@ -53,7 +55,7 @@ Known Bugs:
   **These issues may be fixed in 0.8.55 but I still need to test this**
 
 Front Burner Tasks:
-- Add controls for other outputs (D4, D5, D6, buzzer)
+- Option menu modal.
 
 Back Burner Tasks:
 - Revisit time shift
